--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,6 @@
 <head>
     <title>Text-to-Speech Conversion</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-
-</head>
-<body>
-    <!DOCTYPE html>
-<html>
-<head>
-    <title>Text-to-Speech Conversion</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <div class="welcome-container">
@@ -18,7 +10,7 @@
             <p><strong>Hii!</strong></p>
         </div>
         <div class="welcome-message">
-            <p><strong>Welcome to my Text to Speech Conversion Tool</strong></p>
+            <p><strong>Welcome to our Text to Speech Conversion Tool</strong></p>
         </div>
     </div>
 
